前端驗證資料實作

--- a/public/index.html
+++ b/public/index.html
@@ -11,3 +11,5 @@
   <!-- Vue 應用的 JavaScript 會將 App.vue 渲染到這裡 -->
 </body>
 </html>
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
